# ShadowEngine

./: CMakeLists.txt  README.md  check.py  common.h  functions.cu  functions.cuh  image_transformation.cu  image_transformation.cuh  images.py  main.cu  raytracer.cu  raytracer.cuh  solver.cu  solver.cuh
.github/workflows/: build.yml
